obj/rp.h

/** @name Error codes
 *  Various error codes returned by the API.
 */
///@{

/** Success */
#define RP_OK     0
/**
 * Calibration parameters, stored in the EEPROM device
 */
typedef struct {
    uint32_t fe_ch1_fs_g_hi;    //!< High gain front end full scale voltage, channel A
    uint32_t fe_ch2_fs_g_hi;    //!< High gain front end full scale voltage, channel B
    uint32_t fe_ch1_fs_g_lo;    //!< Low gain front end full scale voltage, channel A
    uint32_t fe_ch2_fs_g_lo;    //!< Low gain front end full scale voltage, channel B
    int32_t  fe_ch1_lo_offs;    //!< Front end DC offset, channel A
    int32_t  fe_ch2_lo_offs;    //!< Front end DC offset, channel B
    uint32_t be_ch1_fs;         //!< Back end full scale voltage, channel A
    uint32_t be_ch2_fs;         //!< Back end full scale voltage, channel B
    int32_t  be_ch1_dc_offs;    //!< Back end DC offset, channel A
    int32_t  be_ch2_dc_offs;    //!< Back end DC offset, on channel B
	uint32_t magic;			    //!
    int32_t  fe_ch1_hi_offs;    //!< Front end DC offset, channel A
    int32_t  fe_ch2_hi_offs;    //!< Front end DC offset, channel B
    uint32_t low_filter_aa_ch1;  //!< Filter equalization coefficients AA for Low mode, channel A
    uint32_t low_filter_bb_ch1;  //!< Filter equalization coefficients BB for Low mode, channel A
    uint32_t low_filter_pp_ch1;  //!< Filter equalization coefficients PP for Low mode, channel A
    uint32_t low_filter_kk_ch1;  //!< Filter equalization coefficients KK for Low mode, channel A
    uint32_t low_filter_aa_ch2;  //!< Filter equalization coefficients AA for Low mode, channel B
    uint32_t low_filter_bb_ch2;  //!< Filter equalization coefficients BB for Low mode, channel B
    uint32_t low_filter_pp_ch2;  //!< Filter equalization coefficients PP for Low mode, channel B
    uint32_t low_filter_kk_ch2;  //!< Filter equalization coefficients KK for Low mode, channel B
    uint32_t  hi_filter_aa_ch1;  //!< Filter equalization coefficients AA for High mode, channel A
    uint32_t  hi_filter_bb_ch1;  //!< Filter equalization coefficients BB for High mode, channel A
    uint32_t  hi_filter_pp_ch1;  //!< Filter equalization coefficients PP for High mode, channel A
    uint32_t  hi_filter_kk_ch1;  //!< Filter equalization coefficients KK for High mode, channel A
    uint32_t  hi_filter_aa_ch2;  //!< Filter equalization coefficients AA for High mode, channel B
    uint32_t  hi_filter_bb_ch2;  //!< Filter equalization coefficients BB for High mode, channel B
    uint32_t  hi_filter_pp_ch2;  //!< Filter equalization coefficients PP for High mode, channel B
    uint32_t  hi_filter_kk_ch2;  //!< Filter equalization coefficients KK for High mode, channel B   

} rp_calib_params_t;
/** @name General
 */
///@{


/**
 * Initializes the library. It must be called first, before any other library method.
 * @return If the function is successful, the return value is RP_OK.
 * If the function is unsuccessful, the return value is any of RP_E* values that indicate an error.
 */

int rp_Init(void);
/**
 * Initializes the library. It must be called first, before any other library method.
 * @param reset Reset to default configuration on api
 * @return If the function is successful, the return value is RP_OK.
 * If the function is unsuccessful, the return value is any of RP_E* values that indicate an error.
 */

int rp_InitReset(bool reset);
int rp_IsApiInit();
int rp_CalibInit();
/**
 * Releases the library resources. It must be called last, after library is not used anymore. Typically before
 * application exits.
 * @return If the function is successful, the return value is RP_OK.
 * If the function is unsuccessful, the return value is any of RP_E* values that indicate an error.
 */
int rp_Release();
/**
* Resets all modules. Typically calles after rp_Init()
* application exits.
* @return If the function is successful, the return value is RP_OK.
* If the function is unsuccessful, the return value is any of RP_E* values that indicate an error.
*/
int rp_Reset();
/**
 * Retrieves the library version number
 * @return Library version
 */
const char* rp_GetVersion();
/**
 * Returns textual representation of error code.
 * @param errorCode Error code returned from API.
 * @return Textual representation of error given error code.
 */
const char* rp_GetError(int errorCode);
///@}
/** @name Digital loop
*/
///@{

/**
* Enable or disables digital loop. This internally connect output to input
* @param enable True if you want to enable this feature or false if you want to disable it
* Each rp_GetCalibrationSettings call returns the same cached setting values.
* @return Calibration settings
*/
int rp_EnableDigitalLoop(bool enable);
///@}
/** @name Calibrate
*/
///@{

/**
* Returns calibration settings.
* These calibration settings are populated only once from EEPROM at rp_Init().
* Each rp_GetCalibrationSettings call returns the same cached setting values.
* @return Calibration settings
*/
rp_calib_params_t rp_GetCalibrationSettings();
/**
* Returns default calibration settings.
* These calibration settings are populated only once from EEPROM at rp_Init().
* Each rp_GetCalibrationSettings call returns the same cached setting values.
* @return Calibration settings
*/
rp_calib_params_t rp_GetDefaultCalibrationSettings();