librp-sys/src/bindings.rs

#[test]
fn bindgen_test_layout_rp_calib_params_t() {
    const UNINIT: ::std::mem::MaybeUninit<rp_calib_params_t> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<rp_calib_params_t>(),
        116usize,
        concat!("Size of: ", stringify!(rp_calib_params_t))
    );
    assert_eq!(
        ::std::mem::align_of::<rp_calib_params_t>(),
        4usize,
        concat!("Alignment of ", stringify!(rp_calib_params_t))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).fe_ch1_fs_g_hi) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(rp_calib_params_t),
            "::",
            stringify!(fe_ch1_fs_g_hi)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).fe_ch2_fs_g_hi) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(rp_calib_params_t),
            "::",
            stringify!(fe_ch2_fs_g_hi)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).fe_ch1_fs_g_lo) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(rp_calib_params_t),
            "::",
            stringify!(fe_ch1_fs_g_lo)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).fe_ch2_fs_g_lo) as usize - ptr as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(rp_calib_params_t),
            "::",
            stringify!(fe_ch2_fs_g_lo)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).fe_ch1_lo_offs) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(rp_calib_params_t),
            "::",
            stringify!(fe_ch1_lo_offs)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).fe_ch2_lo_offs) as usize - ptr as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(rp_calib_params_t),
            "::",
            stringify!(fe_ch2_lo_offs)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).be_ch1_fs) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(rp_calib_params_t),
            "::",
            stringify!(be_ch1_fs)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).be_ch2_fs) as usize - ptr as usize },
        28usize,
        concat!(
            "Offset of field: ",
            stringify!(rp_calib_params_t),
            "::",
            stringify!(be_ch2_fs)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).be_ch1_dc_offs) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(rp_calib_params_t),
            "::",
            stringify!(be_ch1_dc_offs)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).be_ch2_dc_offs) as usize - ptr as usize },
        36usize,
        concat!(
            "Offset of field: ",
            stringify!(rp_calib_params_t),
            "::",
            stringify!(be_ch2_dc_offs)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).magic) as usize - ptr as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(rp_calib_params_t),
            "::",
            stringify!(magic)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).fe_ch1_hi_offs) as usize - ptr as usize },
        44usize,
        concat!(
            "Offset of field: ",
            stringify!(rp_calib_params_t),
            "::",
            stringify!(fe_ch1_hi_offs)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).fe_ch2_hi_offs) as usize - ptr as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(rp_calib_params_t),
            "::",
            stringify!(fe_ch2_hi_offs)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).low_filter_aa_ch1) as usize - ptr as usize },
        52usize,
        concat!(
            "Offset of field: ",
            stringify!(rp_calib_params_t),
            "::",
            stringify!(low_filter_aa_ch1)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).low_filter_bb_ch1) as usize - ptr as usize },
        56usize,
        concat!(
            "Offset of field: ",
            stringify!(rp_calib_params_t),
            "::",
            stringify!(low_filter_bb_ch1)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).low_filter_pp_ch1) as usize - ptr as usize },
        60usize,
        concat!(
            "Offset of field: ",
            stringify!(rp_calib_params_t),
            "::",
            stringify!(low_filter_pp_ch1)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).low_filter_kk_ch1) as usize - ptr as usize },
        64usize,
        concat!(
            "Offset of field: ",
            stringify!(rp_calib_params_t),
            "::",
            stringify!(low_filter_kk_ch1)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).low_filter_aa_ch2) as usize - ptr as usize },
        68usize,
        concat!(
            "Offset of field: ",
            stringify!(rp_calib_params_t),
            "::",
            stringify!(low_filter_aa_ch2)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).low_filter_bb_ch2) as usize - ptr as usize },
        72usize,
        concat!(
            "Offset of field: ",
            stringify!(rp_calib_params_t),
            "::",
            stringify!(low_filter_bb_ch2)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).low_filter_pp_ch2) as usize - ptr as usize },
        76usize,
        concat!(
            "Offset of field: ",
            stringify!(rp_calib_params_t),
            "::",
            stringify!(low_filter_pp_ch2)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).low_filter_kk_ch2) as usize - ptr as usize },
        80usize,
        concat!(
            "Offset of field: ",
            stringify!(rp_calib_params_t),
            "::",
            stringify!(low_filter_kk_ch2)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).hi_filter_aa_ch1) as usize - ptr as usize },
        84usize,
        concat!(
            "Offset of field: ",
            stringify!(rp_calib_params_t),
            "::",
            stringify!(hi_filter_aa_ch1)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).hi_filter_bb_ch1) as usize - ptr as usize },
        88usize,
        concat!(
            "Offset of field: ",
            stringify!(rp_calib_params_t),
            "::",
            stringify!(hi_filter_bb_ch1)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).hi_filter_pp_ch1) as usize - ptr as usize },
        92usize,
        concat!(
            "Offset of field: ",
            stringify!(rp_calib_params_t),
            "::",
            stringify!(hi_filter_pp_ch1)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).hi_filter_kk_ch1) as usize - ptr as usize },
        96usize,
        concat!(
            "Offset of field: ",
            stringify!(rp_calib_params_t),
            "::",
            stringify!(hi_filter_kk_ch1)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).hi_filter_aa_ch2) as usize - ptr as usize },
        100usize,
        concat!(
            "Offset of field: ",
            stringify!(rp_calib_params_t),
            "::",
            stringify!(hi_filter_aa_ch2)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).hi_filter_bb_ch2) as usize - ptr as usize },
        104usize,
        concat!(
            "Offset of field: ",
            stringify!(rp_calib_params_t),
            "::",
            stringify!(hi_filter_bb_ch2)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).hi_filter_pp_ch2) as usize - ptr as usize },
        108usize,
        concat!(
            "Offset of field: ",
            stringify!(rp_calib_params_t),
            "::",
            stringify!(hi_filter_pp_ch2)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).hi_filter_kk_ch2) as usize - ptr as usize },
        112usize,
        concat!(
            "Offset of field: ",
            stringify!(rp_calib_params_t),
            "::",
            stringify!(hi_filter_kk_ch2)
        )
    );
}
extern "C" {
    #[doc = " Initializes the library. It must be called first, before any other library\n method.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_Init() -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Initializes the library. It must be called first, before any other library\n method.\n @param reset Reset to default configuration on api\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_InitReset(reset: bool) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn rp_IsApiInit() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn rp_CalibInit() -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Releases the library resources. It must be called last, after library is not\n used anymore. Typically before application exits.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_Release() -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Resets all modules. Typically calles after rp_Init()\n application exits.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_Reset() -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Retrieves the library version number\n @return Library version"]
    pub fn rp_GetVersion() -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " Returns textual representation of error code.\n @param errorCode Error code returned from API.\n @return Textual representation of error given error code."]
    pub fn rp_GetError(errorCode: ::std::os::raw::c_int) -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " Enable or disables digital loop. This internally connect output to input\n @param enable True if you want to enable this feature or false if you want to\n disable it Each rp_GetCalibrationSettings call returns the same cached\n setting values.\n @return Calibration settings"]
    pub fn rp_EnableDigitalLoop(enable: bool) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Returns calibration settings.\n These calibration settings are populated only once from EEPROM at rp_Init().\n Each rp_GetCalibrationSettings call returns the same cached setting values.\n @return Calibration settings"]
    pub fn rp_GetCalibrationSettings() -> rp_calib_params_t;
}
extern "C" {
    #[doc = " Returns default calibration settings.\n These calibration settings are populated only once from EEPROM at rp_Init().\n Each rp_GetCalibrationSettings call returns the same cached setting values.\n @return Calibration settings"]
    pub fn rp_GetDefaultCalibrationSettings() -> rp_calib_params_t;
}
